auto-test/tests/chapter_18/invalid_struct_tags/param_undeclared.c




int foo(struct s x) {
    return 0;
}